# offboard

./: CMakeLists.txt  README.md  package.xml
ros2_interfaces/: CMakeLists.txt  README.md  package.xml
ros2_interfaces/msg/: Coord.msg
src/: OffboardControl.cpp  OffboardControl.hpp  PID.cpp  YOLO.hpp  can.txt  init.cpp  main.cpp  main.hpp  module.cpp  offboard.cpp  speed.cpp  takeoff.cpp
